# Mako

./: .gitignore  .ycm_extra_conf.py  :w  README  README.md  documentation.config  install.sh  rm_build.sh  vivado.jou  workspace.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/vision/: Observation.h  ObservationRequest.h  ObservationResponse.h
devel/lib/mission/: mission_node
devel/lib/pkgconfig/: control.pc  mission.pc  vision.pc  vision_test.pc
devel/lib/python2.7/dist-packages/vision/srv/: _Observation.py
devel/lib/vision/: vision_node
devel/lib/vision_test/: vision_test_node
devel/share/common-lisp/ros/vision/srv/: Observation.lisp  _package.lisp  _package_Observation.lisp  vision-srv.asd
devel/share/control/cmake/: controlConfig.cmake
devel/share/gennodejs/ros/vision/srv/: Observation.js  _index.js
devel/share/mission/cmake/: missionConfig.cmake
devel/share/roseus/ros/vision/: manifest.l
devel/share/roseus/ros/vision/srv/: Observation.l
devel/share/vision/cmake/: vision-msg-extras.cmake  visionConfig.cmake
devel/share/vision_test/cmake/: vision_testConfig.cmake
doc/html/: acquisition_8cpp.html  acquisition_8cpp__incl.map  acquisition_8cpp__incl.md5  acquisition_8hpp.html  acquisition_8hpp__dep__incl.map  acquisition_8hpp__dep__incl.md5  acquisition_8hpp__incl.map  acquisition_8hpp__incl.md5  acquisition_8hpp_source.html  annotated.html  atmega_8cpp.html  atmega_8cpp__incl.map  atmega_8cpp__incl.md5  atmega_8hpp.html  atmega_8hpp__dep__incl.map  atmega_8hpp__dep__incl.md5  atmega_8hpp__incl.map  atmega_8hpp__incl.md5  atmega_8hpp_source.html  bins_8cpp.html  bins_8cpp__incl.map  bins_8cpp__incl.md5  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8hpp.html  camera_8hpp__dep__incl.map  camera_8hpp__dep__incl.md5  camera_8hpp__incl.map  camera_8hpp__incl.md5  camera_8hpp_source.html  classModel.html  classTensor.html  classVisionService.html  classVisionService__coll__graph.map  classVisionService__coll__graph.md5  classes.html  client_8cpp.html  client_8cpp__incl.map  client_8cpp__incl.md5  (+192 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  files_b.js  files_c.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
doc/latex/: acquisition_8cpp.tex  acquisition_8cpp__incl.md5  acquisition_8hpp.tex  acquisition_8hpp__dep__incl.md5  acquisition_8hpp__incl.md5  annotated.tex  atmega_8cpp.tex  atmega_8cpp__incl.md5  atmega_8hpp.tex  atmega_8hpp__dep__incl.md5  atmega_8hpp__incl.md5  bins_8cpp.tex  bins_8cpp__incl.md5  camera_8cpp.tex  camera_8cpp__incl.md5  camera_8hpp.tex  camera_8hpp__dep__incl.md5  camera_8hpp__incl.md5  classModel.tex  classTensor.tex  classVisionService.tex  classVisionService__coll__graph.md5  client_8cpp.tex  client_8cpp__incl.md5  client_8hpp.tex  client_8hpp__dep__incl.md5  client_8hpp__incl.md5  commands_8cpp.tex  commands_8cpp__incl.md5  commands_8hpp.tex  commands_8hpp__dep__incl.md5  commands_8hpp__incl.md5  config_8hpp.tex  config_8hpp__dep__incl.md5  control_8cpp.tex  control_8cpp__incl.md5  dir_157f2e1ce8f3c64e81e6856d13ab548a.tex  dir_157f2e1ce8f3c64e81e6856d13ab548a_dep.md5  dir_1b0df9e6402ed94628c9445423b48a0d.tex  dir_2672f143338960b8a1833af31a6b49e6.tex  (+90 more)
install/: .rosinstall
src/control/: CMakeLists.txt
src/control/include/control/: atmega.hpp  state.hpp
src/control/src/: atmega.cpp
src/mission/: CMakeLists.txt  package.xml
src/mission/src/: functions.cpp  mission.cpp
src/sub_control/: CMakeLists.txt  package.xml
src/sub_control/include/control/: atmega.hpp  service.hpp  state.hpp
src/sub_control/src/: .atmega.cpp.swp  atmega.cpp  control.cpp  service.cpp
src/sub_control/srv/: ControlState.srv  ControlWriteState.srv
src/sub_interface/: CMakeLists.txt  package.xml  setup.py
src/sub_interface/src/: flask_interface.py  interface.py
src/sub_interface/src/interface/: interface.py
src/sub_interface/src/interface/templates/: index.html
src/sub_mission/: CMakeLists.txt  package.xml
src/sub_mission/include/mission/: client.hpp  commands.hpp  config.hpp  euler.hpp  functions.hpp
src/sub_mission/src/: client.cpp  commands.cpp  euler.cpp  functions.cpp  mission.cpp  prelim.cpp  restart.cpp
src/sub_remote_control/: CMakeLists.txt  package.xml
src/sub_remote_control/src/: receiver.cpp  remote_control.cpp
src/sub_vision/: CMakeLists.txt  package.xml  setup.py
src/sub_vision/include/vision/: acquisition.hpp  config.hpp  filters.hpp  log.hpp  model.hpp  observation.hpp  service.hpp  tasks.hpp  tensor.hpp
src/sub_vision/src/: acquisition.cpp  bins.cpp  camera.cpp  capture.cpp  detect.cpp  filters.cpp  gate.cpp  log.cpp  mock_camera.cpp  mock_detect.cpp  model.cpp  service.cpp  target.cpp  tensor.cpp  vision.cpp
src/sub_vision/src/tf_vision/: inference.py  map_util.py  vis_util.py
src/sub_vision/srv/: Vision.srv
src/vision/: CMakeLists.txt  package.xml
src/vision/include/vision/: camera.hpp  config.hpp  filters.hpp  service.hpp
src/vision/src/: camera.cpp  capture.cpp  detect.cpp  filters.cpp  log.cpp  mock_camera.cpp  mock_detect.cpp  vision.cpp
src/vision/srv/: Observation.srv
src/vision_test/: CMakeLists.txt
src/vision_test/src/: vision_test.cpp
startup/: debug.sh  log.sh  restart.sh  sim.sh  standard.sh
